--- a/code/style/styles.css
+++ b/code/style/styles.css
@@ -3,9 +3,11 @@ main {
   border: 1px solid black;
   margin: 20px auto;
   padding: 10px;
+  border-radius: 7px;
 }
 
 .container {
+  border-radius: 7px;
   padding: 10px;
   margin: 25px;
   border: 1px solid black;
